2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* ==== Released 1.0.1 ====

	* configure.in: Version 1.0.1, Binary age 1, interface age 0.

2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/font-pangoft2.c (gl_pango_ft2_render_layout): 
	* examples/font-pangoft2-tex.c (gl_tex_pango_ft2_render_layout):
	Use GL_UNSIGNED_BYTE data type if OpenGL 1.2 is not supported.

2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/Makefile.mingw (PROGRAMS): 
	* examples/Makefile.msc (PROGRAMS): Removed font-pangoft2*
	examples. They don't work on win32.

2003-07-24  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c (struct GLWidgetPrivate): Added
	unrealize_handler and destroy_handler members. Removed
	need_unrealize flag.
	(gtk_gl_widget_realize, gtk_gl_widget_unrealize) 
	(gtk_widget_set_gl_capability): "unrealize" signal handler
	connection is done by "realize" handler. This change makes
	user's "unrealize" handler possible to call OpenGL functions.
	(gtk_widget_get_gl_context, gtk_gl_widget_destroy_gl_context):
	"destroy" signal handler connection is done by
	gtk_widget_get_gl_context().

	* examples/template.c (unrealize): OpenGL functions can be called
	in "unrealize" handler.

2003-07-24  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/font-pangoft2-tex.c: 
	* examples/Makefile.am (common_programs): 
	* examples/Makefile.mingw (PROGRAMS): 
	* examples/Makefile.msc (PROGRAMS): Added simple example for text
	texture rendering with PangoFT2.

2003-07-21  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* configure.in: Added $EXAMPLES_DEP_CFLAGS contains PangoFT2
	cflags. Added $GTKGLEXT_DEP_LIBS_WITH_PANGOFT2 contains PangoFT2
	libs.

	* examples/Makefile.am (INCLUDES): Use $EXAMPLES_DEP_CFLAGS.
	(LDADDS_WITH_PANGOFT2): For font-pangoft2.

	* examples/Makefile.msc (LIBS_WITH_PANGOFT2): 
	* examples/Makefile.mingw (LIBS_WITH_PANGOFT2): For font-pangoft2.
